--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+base64 = "0.22.1"
 case = "1.0.0"
+md5 = "0.7.0"
+percent-encoding = "2.3.1"
 rand = "0.9.1"
 regex = "1.11.1"
+sha1 = "0.10.6"
+sha2 = "0.10.8"
+url = "2.5.4"
