--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,15 @@ edition = "2024"
 [dependencies]
 base64 = "0.22.1"
 case = "1.0.0"
+lightningcss = "1.0.0-alpha.65"
 md5 = "0.7.0"
 percent-encoding = "2.3.1"
+quick-xml = "0.37.4"
 rand = "0.9.1"
 regex = "1.11.1"
+serde_json = "1.0.140"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
+sqlformat = "0.3.5"
 url = "2.5.4"
+xmltree = "0.11.0"
